--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-mongo": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "moment": "^2.29.1",
